--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ joblib==1.3.2
 plotly==5.17.0
 scikit-learn==1.3.1
 streamlit==1.27.1
+pandas==2.2.2
+requests<3
+seaborn==0.13.2
+matplotlib==3.8.4
+psynlig
+shap
